syntax = "proto3";

package coloc;

option go_package = "github.com/vblanchet22/back_coloc/proto/pb";

import "google/api/annotations.proto";

// AuthService handles authentication operations
service AuthService {
  // Register a new user
  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/auth/register"
      body: "*"
    };
  }

  // Login with email and password
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/auth/login"
      body: "*"
    };
  }

  // Refresh access token using refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/auth/refresh"
      body: "*"
    };
  }

  // Logout (invalidate refresh token)
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/auth/logout"
      body: "*"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string nom = 3;
  string prenom = 4;
  optional string telephone = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  UserInfo user = 4;
}

message LogoutResponse {
  bool success = 1;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string nom = 3;
  string prenom = 4;
  optional string telephone = 5;
  optional string avatar_url = 6;
}
